Sat Jan 15 02:45:19 GMT 2005  Olly Betts <olly@survex.com>

	* HACKING: Note that '#include <limits>' isn't supported by GCC 2.95,
	  and other assorted minor tweaks.

Sat Jan 08 16:09:10 GMT 2005  Olly Betts <olly@survex.com>

	* api/maptermlist.h,backends/inmemory/inmemory_database.h,
	  backends/quartz/quartz_postlist.h,common/,matcher/localmatch.h,
	  matcher/mergepostlist.h,matcher/phrasepostlist.h,net/progclient.cc:
	  Fixes for SGI C++ warnings.

Fri Jan  7 13:02:49 GMT 2005  Richard Boulton <richard@tartarus.org>

	* common/positionlist.h: Correct out-of-date documentation comment.

Tue Jan 04 03:05:26 GMT 2005  Olly Betts <olly@survex.com>

	* matcher/multimatch.cc: Removed unnecessary class declaration.

Tue Jan 04 03:02:02 GMT 2005  Olly Betts <olly@survex.com>

	* configure.ac: Automatically enable ANSI C++ mode for SGI's compiler
	  with '-LANG:std'; check that any automatically determined flags
	  for ANSI C++ mode actually allow us to compile a trivial program
	  - if they don't it probably means the compiler isn't the one we
	  were expecting, but one installed with the same name, so we now
	  drop the flags in this case.

Thu Dec 30 00:50:58 GMT 2004  Olly Betts <olly@survex.com>

	* extra/queryparser.yy: QueryParser::parse_query() was failing to
	  clear termlist and unstem.

Fri Dec 24 00:07:28 GMT 2004  Olly Betts <olly@survex.com>

	* PLATFORMS: Updated from tinderbox.

Thu Dec 23 21:13:46 GMT 2004  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc: Fixed GCC compilation warning.

Thu Dec 23 17:22:15 GMT 2004  Olly Betts <olly@survex.com>

	* INSTALL,README: Updated.
	* README: Don't quote chunks of the GPL - just refer people to the
	  full text in COPYING.

Thu Dec 23 16:55:03 GMT 2004  Olly Betts <olly@survex.com>

	* NEWS,PLATFORMS,configure.ac: Updated for 0.8.5 release.

Tue Dec 21 13:26:55 GMT 2004  Olly Betts <olly@survex.com>

	* docs/quickstart.html: Improved wording.

Tue Dec 21 13:03:06 GMT 2004  Olly Betts <olly@survex.com>