@@ -1,3 +1,7 @@
+Sat Jan 15 03:30:33 GMT 2005  Olly Betts <olly@survex.com>
+
+	* docs/Makefile.am: Clearer rules for making Postscript doxygen docs.
+
 Sat Jan 15 02:45:19 GMT 2005  Olly Betts <olly@survex.com>
 
 	* HACKING: Note that '#include <limits>' isn't supported by GCC 2.95,
